--- a/index.html
+++ b/index.html
@@ -11,13 +11,25 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="cake.svg" type="image/x-icon" />
     <title>Торты на заказ</title>
   </head>
   <body>
+    <header class="headerMenu">
+      <nav class="top-menu">
+        <ul class="menu-main">
+          <li class="left-item"><a href="">Work</a></li>
+          <li class="left-item"><a href="">About</a></li>
+          <li class="left-item"><a href="">Story</a></li>
+          <li class="right-item"><a href="">Contact</a></li>
+          <li class="right-item"><a href="">Shop</a></li>
+          <li class="right-item"><a href="">Gallery</a></li>
+        </ul>
+        <a class="navbar-logo" href=""></a>
+      </nav>
+    </header>
+    <h1 class="mainText">Торты на заказ</h1>
     <div>
-      <header>
-        <h1>Торты на заказ</h1>
-      </header>
       <div class="main">
         <div class="cake_element">
           <img class="cake" src="cake.jpg" alt="" />
@@ -50,7 +62,7 @@
           <p>Состав: всякие вкусности</p>
         </div>
       </div>
-      <footer>contacts</footer>
     </div>
+    <footer>contacts</footer>
   </body>
 </html>
