--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
     <header class="headerMenu">
       <nav class="top-menu">
         <ul class="menu-main">
-          <li class="left-item"><a href="">Work</a></li>
-          <li class="left-item"><a href="">About</a></li>
-          <li class="left-item"><a href="">Story</a></li>
-          <li class="right-item"><a href="">Contact</a></li>
-          <li class="right-item"><a href="">Shop</a></li>
-          <li class="right-item"><a href="">Gallery</a></li>
+          <li class="menu-main-item"><a href="">Каталог</a></li>
+          <li class="menu-main-item"><a href="">Начинки</a></li>
+          <li class="menu-main-item"><a href="">Галерея</a></li>
+          <li class="menu-main-item"><a href="">О нас</a></li>
+          <li class="menu-main-item"><a href="">Контакты</a></li>
         </ul>
         <a class="navbar-logo" href=""></a>
       </nav>
@@ -32,37 +31,37 @@
     <div>
       <div class="main">
         <div class="cake_element">
-          <img class="cake" src="cake.jpg" alt="" />
+          <img class="cake" src="cake1.jpg" alt="" />
           <p>Цена: 1000 Рублей</p>
           <p>Состав: всякие вкусности</p>
         </div>
         <div class="cake_element">
-          <img class="cake" src="cake.jpg" alt="" />
+          <img class="cake" src="cake2.jpg" alt="" />
           <p>Цена: 1000 Рублей</p>
           <p>Состав: всякие вкусности</p>
         </div>
         <div class="cake_element">
-          <img class="cake" src="cake.jpg" alt="" />
+          <img class="cake" src="cake3.jpg" alt="" />
           <p>Цена: 1000 Рублей</p>
           <p>Состав: всякие вкусности</p>
         </div>
         <div class="cake_element">
-          <img class="cake" src="cake.jpg" alt="" />
+          <img class="cake" src="cake4.jpg" alt="" />
           <p>Цена: 1000 Рублей</p>
           <p>Состав: всякие вкусности</p>
         </div>
         <div class="cake_element">
-          <img class="cake" src="cake.jpg" alt="" />
+          <img class="cake" src="cake5.jpg" alt="" />
           <p>Цена: 1000 Рублей</p>
           <p>Состав: всякие вкусности</p>
         </div>
         <div class="cake_element">
-          <img class="cake" src="cake.jpg" alt="" />
+          <img class="cake" src="cake6.jpg" alt="" />
           <p>Цена: 1000 Рублей</p>
           <p>Состав: всякие вкусности</p>
         </div>
       </div>
     </div>
-    <footer>contacts</footer>
+    <footer></footer>
   </body>
 </html>
