--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     />
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./svg/cake.svg" type="image/x-icon" />
-    <title>Sweet Life</title>
+    <title>Sweet Workshop</title>
   </head>
   <body>
     <header>
       <nav class="top-menu">
-        <h1 class="mainText">Сладкая жизнь <br />от SandraBoyko</h1>
+        <h1 class="mainText">Сладкая мастерская <br />для самых близких</h1>
         <ul class="menu-main">
           <li class="menu-main-item"><a href="">Каталог</a></li>
           <li class="menu-main-item"><a href="">Начинки</a></li>
           <li class="menu-main-item"><a href="">Портфолио</a></li>
-          <li class="menu-main-item"><a href="">О нас</a></li>
+          <li class="menu-main-item"><a href="">Обо мне</a></li>
           <!-- <li class="menu-main-item"><a href="">Контакты</a></li> -->
         </ul>
         <!-- <a class="navbar-logo" href="">fgfgfghg</a> -->
@@ -63,6 +63,9 @@
         </div>
       </div>
     </div> -->
+    <main class="main_content">
+      <div class="main_cake"></div>
+    </main>
     <footer class="footer">
       <ul class="footerList">
         <li class="footerElement">
@@ -80,7 +83,7 @@
           /></a>
         </li>
         <li class="footerElement">
-          <a href=""
+          <a href="https://t.me/Sandraboyko2014" target="_blank"
             ><img
               src="./svg/11telegram-svgrepo-com.svg"
               alt=""
